syntax = "proto3";

option csharp_namespace = "AuthenticationService.Protos";

message  GetUsersReq { }

message GetUsersRes {
  bool success = 1;
  string token = 2;
}

service AuthenticationService {
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
}